@@ -519,7 +519,7 @@ class MainWindow(QtWidgets.QMainWindow, Ui_MainWindow):
         if self.database_ok:
             self.request_plot_thread = RequestPlotDataThread(self.canvas_in, self.canvas_out, self.plot_in,
                                                              self.plot_in_2, self.plot_out, self.plot_out_2,
-                                                             self.db_dict)
+                                                             self.db_dict, self.config_dict, self.sensor_dict)
             self.request_plot_thread.success.connect(self.plot_time_series_end)
             self.request_plot_thread.error.connect(self.plot_time_series_error)
             self.request_plot_thread.start()
